// Docs: https://www.dbml.org/docs

// All temperature values in celsius
Table species {
  name varchar [pk]
  perfect_temperature integer
  perfect_light_per_day decimal
  perfect_humidity decimal
  perfect_moisture decimal
}

Table room {
  name varchar [pk]
  clientId varchar [pk]
  
}

Table room_timeseries_data {
  room long [pk]
  clientId varchar [pk]
  timestamp timestamp [pk]
  temperature integer
  brightness decimal
  humidity decimal
}

Ref: room_timeseries_data.room > room.name

// One plant of the user
Table plant {
  id long [pk]
  clientId varchar [pk]
  nickname varchar
  room integer
  species varchar
}

Ref: plant.room > room.name
Ref: plant.clientId > room.clientId
Ref: plant.species > species.name

Table plant_timeseries_data {
  plant long [pk]
  clientId varchar [pk]
  timestamp timestamp
  moisture decimal


}

Ref: plant_timeseries_data.plant > plant.id
Ref: plant_timeseries_data.clientId > plant.clientId








